fixed alignment issue

--- a/openmetadata-ui/src/main/resources/ui/src/styles/app.less
+++ b/openmetadata-ui/src/main/resources/ui/src/styles/app.less
@@ -1,5 +1,5 @@
 /*
- *  Copyright 2021 Collate
+ *  Copyright 2022 Collate
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
  *  You may obtain a copy of the License at
@@ -11,19 +11,10 @@
  *  limitations under the License.
  */
 
-import 'tailwindcss/tailwind.css';
-import '../fonts/Inter/Inter-VariableFont_slnt,wght.ttf';
-import './antd-master.less';
-import './app.less';
-import './components/glossary.less';
-import './components/step.less';
-import './fonts.css';
-import './myDataDetailsTemp.css';
-import './slick-carousel.scss';
-import './tailwind.css';
-import './temp.css';
-import './x-custom/code-mirror.css';
-import './x-custom/CronEditor.css';
-import './x-custom/EntityVersionTimeLine.css';
-import './x-custom/stepper.css';
-import './x-master.css';
+// common css utils file
+
+.flex-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
